<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_current"
            android:icon="@drawable/ic_sunny"
            android:title="@string/current_weather" />
        <item
            android:id="@+id/nav_city"
            android:icon="@drawable/ic_location"
            android:title="@string/select_city" />
        <item
            android:id="@+id/nav_music"
            android:icon="@drawable/ic_music"
            android:title="@string/music_player" />
        <item
            android:id="@+id/nav_diary"
            android:icon="@drawable/ic_diary"
            android:title="@string/diary" />
    </group>

    <item android:title="其他">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info"
                android:title="@string/about" />
        </menu>
    </item>

</menu>